--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "real-time-communication"
   ],
   "author": "BadNintendo",
-  "license": "MIR",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/BadNintendo/WRP/issues"
   },
